--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                     </div>
                     <div class="input-group">
                         <label for="verlof_uren" data-translate-key="labelHoursToSell">Aantal uren te verkopen (<span id="verlof_max_uren_label">max 38</span>)</label>
-                        <input type="number" id="verlof_uren" value="0" min="0" max="38">
+                        <input type="number" id="verlof_uren" min="0" max="38">
                     </div>
                 </div>
                 <div class="action-container">
