--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <label for="source-selector" id="source-selector-label" data-translate-key="sourceSelectorLabel">Kies uw berekening</label>
             <select id="source-selector">
                 <option value="reiskosten" selected data-translate-key="sourceTravel">Reiskosten</option>
-                <option value="fiets" data-translate-key="sourceBike">Fiets</option>
-                <option value="extra_verlof" data-translate-key="sourceLeave">Extra verlof</option>
-                <option value="vakbond" data-translate-key="sourceUnion">Vakbondcontributie</option>
+                <option value="fiets" data-translate-key="sourceBike" hidden>Fiets</option>
+                <option value="extra_verlof" data-translate-key="sourceLeave" hidden>Extra verlof</option>
+                <option value="vakbond" data-translate-key="sourceUnion" hidden>Vakbondcontributie</option>
             </select>
         </div>
 
