--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <p class="footer-disclaimer" data-translate-key="disclaimer">
             * Let op: dit is een indicatieve berekening. Aan de resultaten kunnen geen rechten worden ontleend.
         </p>
+        <p class="footer-disclaimer1" data-translate-key="disclaimer1">
+            En: een lager brutoloon kan van invloed zijn op de hoogte van eventuele toekomstige uitkeringen vanuit Sociale Zekerheid.
+        </p>
 
         <!-- Container voor tools (elk in eigen sectie) -->
               <section id="tool-reiskosten" class="tool-section">
