--- a/index.html
+++ b/index.html
@@ -580,6 +580,15 @@
 </div>
 
     <!-- JavaScript bestanden -->
+     <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2TMHR4P1VW"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2TMHR4P1VW');
+</script>
 <script type="module" src="js/main.js"></script>
 
 </body>
